--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Python #安装python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
     - name: Install requests #安装requests
       run: |
         pip install requests
